Wrong padding in the navigation has been fixed

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ a {
 }
 
 .main-navigation li {
-  margin-left: 46px;
+  margin-left: 45px;
   padding-bottom: 3px;
 }
 
